--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -4,11 +4,11 @@
 #   prefix:   /_internal
 homepage:
     pattern:  /
-    defaults: { _controller: SonataPageBundle:Page:catchAll }
+    defaults: { _controller: ApplicationBrickstormSiteBundle:Main:home }
 
-sonata_user_impersonating:
-    pattern:  /
-    defaults: { _controller: SonataPageBundle:Page:catchAll }
+#sonata_user_impersonating:
+#    pattern:  /
+#    defaults: { _controller: SonataPageBundle:Page:catchAll }
 
 fos_user_security:
     resource: "@FOSUserBundle/Resources/config/routing/security.xml"
@@ -29,13 +29,13 @@ fos_user_change_password:
     resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
     prefix: /change-password
 
-sonata_page_cache:
-    resource: '@SonataPageBundle/Resources/config/routing/cache.xml'
-    prefix: /
+#sonata_page_cache:
+#    resource: '@SonataPageBundle/Resources/config/routing/cache.xml'
+#    prefix: /
 
-sonata_page_exceptions:
-    resource: '@SonataPageBundle/Resources/config/routing/exceptions.xml'
-    prefix: /page
+#sonata_page_exceptions:
+#    resource: '@SonataPageBundle/Resources/config/routing/exceptions.xml'
+#    prefix: /page
 
 sonata_media_gallery:
     resource: '@SonataMediaBundle/Resources/config/routing/gallery.xml'
@@ -70,8 +70,8 @@ soanata_user:
     resource: '@SonataUserBundle/Resources/config/routing/admin_security.xml'
     prefix: /admin
 
-catchAll:
-    pattern:  /{path}
-    defaults: { _controller: SonataPageBundle:Page:catchAll }
-    requirements:
-        path: .*
+#catchAll:
+#    pattern:  /{path}
+#    defaults: { _controller: SonataPageBundle:Page:catchAll }
+#    requirements:
+#        path: .*
